# sashakt-core

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  deployment.md  development.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: csv_processor.py  main.py  populate_sample_data.py  utils.py  veddis_question_bank.csv
backend/app/alembic/: env.py
backend/app/alembic/versions/: 02a2b9df2ab8_add_partial_marking_flag_to_test_model.py  0344796ba737_seed_default_providers.py  0ff5b8a9cdab_initial_migration.py  145b493d175b_add_omr_field_to_test_model.py  1466d8703ddc_initial_migration.py  168f67609694_add_provider_tables_and_permissions.py  176a93f83db9_add_bookmarked_field_to_candidate_test_.py  1aa2d346ea8b_add_admin_id_to_candidate_test.py  1bd6d95bd239_initial_migration.py  1d236ebb6a4b_add_omr_field_to_test_model.py  1d87b90c988a_create_entity_and_entity_type_table.py  1e86265e426c_initial_migration.py  21a569847360_add_language_field_to_test_model.py  2457a2835629_adding_optimized_locale_field_to_test_.py  26a60da52cb1_add_subjective_answer_min_length_to_.py  2940b075b50a_update_table_names_for_correct_naming_.py  295ee6a064f5_initial_migration.py  2b22be39816d_add_language_field_to_test_model.py  2b435ba781c7_add_new_feedback_related_fields_to_test_.py  2ea10cff3963_initial_migration.py  2ef92487b84e_apply_database_schema_updates.py  2f69b3b1c488_add_permission_for_system_admin_to_.py  303084e65c1e_add_permissions_for_entity.py  322869f0dc4f_initial_migration.py  36fb8ed74f93_add_certificate_data_to_candidatetest.py  3c698fff4986_initial_migration.py  3dbf18f67981_initial_migration.py  4295f412e7f9_created_alembic_migration_for_index_.py  4449e9876d70_initial_migration.py  449d29a9e71d_created_entity_and_entity_type_table.py  44b95b87d350_remove_links_from_test_table.py  489ffc816c1a_initial_migration.py  4b67ce0b461a_make_tag_type_id_optional_in_tag_table.py  4f2c8a6d9b11_add_question_sets_for_tests.py  57ac4abbbad5_add_organization_settings_table.py  594fa4e77a5d_updating_permissions_for_test_admin.py  5a569fdae5c8_initial_migration.py  5b4a66539713_backfill_admin_id_in_candidate_test.py  5b60a85a7810_add_testdistrict_linking_table.py  5df93aaac93f_enforce_is_deleted_field_to_be_boolean_.py  (+98 more)
backend/app/api/: deps.py  main.py
backend/app/api/routes/: candidate.py  certificate.py  entity.py  form.py  languages.py  location.py  login.py  media.py  organization.py  organization_settings.py  organizations.py  permission.py  permissions.py  private.py  providers.py  question.py  roles.py  tag.py  test.py  users.py  utils.py
backend/app/core/: candidate.py  certificate_token.py  config.py  create_haryana_blocks.py  create_haryana_clf.py  db.py  files.py  haryana-blocks-create.json  haryana-clf-create.json  location.py  media.py  permission_data.json  permissions.py  provider_config.py  providers.py  question_sets.py  quiz_json_import.py  roles.py  security.py  timezone.py
backend/app/crud/: __init__.py  organization_settings.py  role.py  user.py
backend/app/models/: __init__.py  auth.py  candidate.py  certificate.py  entity.py  form.py  location.py  organization.py  organization_settings.py  permission.py  provider.py  question.py  role.py  tag.py  test.py  user.py  utils.py
backend/app/services/: certificate_tokens.py  data_sync.py  google_slides.py  organization_nomenclature.py  organization_settings_mapper.py
backend/app/tests/: conftest.py
backend/scripts/: export_bigquery.py  import_blocks.py  import_entity.py  import_quiz_json.py  reset-migrations.sh  test.sh
backend/tests/api/: test_candidate.py
(+91 files in other folders)
