[project]
name = "app"
version = "0.1.0"
description = "Sashakt backend app"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "fastapi>=0.115.8",
    "pre-commit>=4.1.0",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "fastapi[standard]",
    "pytest"
]

[build-system]
requires = ["uv<0.7"]
build-backend = "uv"
