[project]
name = "app"
version = "0.1.0"
description = "Sashakt backend app"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard]<1.0.0,>=0.139.0",
    "python-multipart<1.0.0,>=0.0.7",
    "email-validator<3.0.0.0,>=2.1.0.post1",
    "passlib[bcrypt]<2.0.0,>=1.7.4",
    "tenacity<10.0.0,>=8.2.3",
    "pydantic>2.0",
    "emails<1.0,>=0.6",
    "jinja2<4.0.0,>=3.1.4",
    "alembic<2.0.0,>=1.18.0",
    "httpx<1.0.0,>=0.25.1",
    "psycopg[binary]<4.0.0,>=3.1.13",
    "sqlmodel<1.0.0,>=0.0.39",
    # Pin bcrypt until passlib supports the latest
    "bcrypt==4.0.1",
    "pydantic-settings<3.0.0,>=2.14.0",
    "sentry-sdk[fastapi]>=2.66.0",
    "pyjwt<3.0.0,>=2.8.0",
    "fastapi-pagination>=0.15.0",
    "google-cloud-bigquery>=3.42.0,<4.0.0",
    "google-cloud-storage>=2.10.0,<3.0.0",
    "google-auth>=2.56.0,<3.0.0",
    "google-api-python-client>=2.198.0,<3.0.0",
    "cryptography>=49.0.0",
    "python-magic>=0.4.27",
    "Pillow>=12.0.0",
]

[dependency-groups]
dev = [
    "pytest<10.0.0,>=9.0.0",
    "mypy<2.0.0,>=1.8.0",
    "ruff<1.0.0,>=0.15.0",
    "pre-commit<5.0.0,>=3.6.2",
    "types-passlib<2.0.0.0,>=1.7.7.20240106",
    "coverage<8.0.0,>=7.4.3",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py313"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
